@@ -29,11 +29,11 @@ tag_message = %v
 
 [Prereqs]
 Message::Passing = 0.114
-Search::Elasticsearch::Async = 1.11
+Search::Elasticsearch::Async = 5.00
 Moo = 1.003001
 
 [Prereqs / TestRequires]
 Test::More = 0.98
 Test::Exception = 0.32
-Search::Elasticsearch = 1.11
+Search::Elasticsearch = 5.00
 AnyEvent = 7.07
