@@ -1,5 +1,6 @@
 {{ $NEXT }}
     - now asynchronous
+    - compatible with Elasticsearch 5.0
 
 0.002     2014-03-17 16:05:18+01:00 Europe/Vienna
     - fix named_index_and_type.t when Elasticsearch isn't installed
